exercises/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      securityContext:
        runAsUser: 0 # set to use root permissions to be able to write files
      volumes: # Define volume
      - name: shared-random-string
        emptyDir: {}
      - name: config-volume
        configMap:
          name: log-output-configmap
      #volumes:
      #- name: shared-pingpong-amount
      #  persistentVolumeClaim:
      #    claimName: ping-pong-amount-pvclaim
      containers:
      - name: string-generator
        image: EXERCISES/LOG-OUTPUT-STRING-GENERATOR-IMAGE
        volumeMounts:
        - name: shared-random-string
          mountPath: /usr/src/app/files
        - name: config-volume
          mountPath: "/usr/src/app/config"
          readOnly: true
      - name: string-responder
        image: EXERCISES/LOG-OUTPUT-STRING-RESPONDER-IMAGE
        volumeMounts:
        - name: shared-random-string
          mountPath: /usr/src/app/files
